# cpp-industrial-monitor

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
